# nucleo-rust

./: .editorconfig  .gdbinit  .gitignore  Cargo.toml  LICENSE  README.md  qemu-system-gnuarmeclipse.sh  to-bin.sh
.cargo/: config
examples/: idle.rs  timer-tick.rs
src/: dma.rs  led.rs  main.rs
stm32f401re_hal/: Cargo.toml  memory.x
stm32f401re_hal/.cargo/: config
stm32f401re_hal/src/: lib.rs  rcc.rs
stm32f401re_hal/src/gpio/: mod.rs
stm32f4xx-hal/src/: adc.rs  dma.rs  lib.rs
tool/: read_serial.py
