[package]
name = "nucleo-rust"
version = "0.3.0"
authors = ["kflange <zknsftk1msrk@gmail.com>"]
edition = "2018"

keywords = [
  "arm",
  "embedded",
  "mbed",
  "cortex-m",
  "stm32f401",
]

[dependencies]
cortex-m = "0.7.3"
cortex-m-rtic = { version = "0.6.0-rc.4" }
cortex-m-semihosting = "0.3.7"
embedded-hal = "0.2"
fugit = "0.3"
nb = "1"
# panic-halt = "0.2.0"
panic-semihosting = { version = "0.5.6", features = ["exit"] }

# [dependencies.stm32f4xx-hal]
# version = "0.10.1"
# features = ["stm32f401", "rt", "rtic"]
[dependencies.stm32f4xx-hal]
git = "https://github.com/stm32-rs/stm32f4xx-hal"
features = ["stm32f401", "rt", "rtic"]

[profile.dev]
debug = true
lto = true

[profile.release]
debug = true
lto = true
