[package]
name = "stm32f401re_hal"
version = "0.1.0"
authors = ["kflange <zknsftk1msrk@gmail.com>"]

[dependencies]
embedded-hal = "0.2.1"


[dependencies.stm32f4]
version = "0.2.2"
features = ["stm32f401"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true

[profile.release]
incremental = false
codegen-units = 1
lto = true
